--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -11,13 +11,13 @@
 
         <!-- første tab når man åbner appen, Timer-side  -->
         <ShellContent   
-            Title="Timer"
+            Title="Ve timer"
             ContentTemplate="{DataTemplate views:AboutPage}"
             Icon="{OnPlatform 'icon_about.png', iOS='icon_about_ios.png', MacCatalyst='icon_about_ios.png'}" />
 
             <!-- anden tab, notat-side  -->
         <ShellContent
-            Title="Notes"
+            Title="Noter"
             ContentTemplate="{DataTemplate views:AllNotesPage}"
             Icon="{OnPlatform 'icon_notes.png', iOS='icon_notes_ios.png', MacCatalyst='icon_notes_ios.png'}" />
     </TabBar>
