--- a/Views/AllNotesPage.xaml
+++ b/Views/AllNotesPage.xaml
@@ -7,7 +7,7 @@
              x:DataType="models:AllNotes">
     <!-- toolbar med add / tilføj knap -->
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add" Clicked="Add_Clicked" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
+        <ToolbarItem Text="Ny note" Clicked="Add_Clicked" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
     </ContentPage.ToolbarItems>
 
     <!-- visr liste af gemte noter -->
