Ændret titler til dansk og tilføjet en titel

--- a/Views/TimerDetailPage.xaml
+++ b/Views/TimerDetailPage.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:Notes.Models"
              x:Class="Notes.Views.TimerDetailPage"
+             Title="Ve"
              x:DataType="models:TimerEntry">
 
     <VerticalStackLayout Padding="20" Spacing="20">
