--- a/Views/AboutPage.xaml
+++ b/Views/AboutPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:Notes.Models"
              x:Class="Notes.Views.AboutPage"
-             Title="Timer">
+             Title="Ve Timer">
 
     <ScrollView>        <!-- hvis siden bliver fyldt kan der scorles -->
         <VerticalStackLayout Spacing="20" Padding="20">
