--- a/Views/AllNotesPage.xaml
+++ b/Views/AllNotesPage.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:Notes.Models"
              x:Class="Notes.Views.AllNotesPage"
-             Title="Your Notes"
+             Title="Dine noter"
              x:DataType="models:AllNotes">
+    
     <!-- toolbar med add / tilføj knap -->
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Ny note" Clicked="Add_Clicked" IconImageSource="{FontImage Glyph='+', Color=Black, Size=22}" />
