--- a/Views/NotePage.xaml
+++ b/Views/NotePage.xaml
@@ -3,8 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:models="clr-namespace:Notes.Models"
              x:Class="Notes.Views.NotePage"
-             Title="Note"
+             Title="Noter"
              x:DataType="models:Note">
+    
     <VerticalStackLayout Spacing="10" Margin="5">   <!-- laver layourtet vertikalt med spacing -->
             <!-- Editor så der kan ændres i noter -->
         <Editor x:Name="TextEditor"
