--- a/Views/NotePage.xaml
+++ b/Views/NotePage.xaml
@@ -15,10 +15,18 @@
             <!-- grid af 2, til save og delete knaper -->
         <Grid ColumnDefinitions="*,*" ColumnSpacing="4">
             <Button Text="Gem note"
+                    WidthRequest="250"  
+                    BackgroundColor="#673AB7"  
+                    TextColor="White"  
+                    CornerRadius="8"  
                     Clicked="SaveButton_Clicked" /> <!-- gem knap -->
 
             <Button Grid.Column="1"
                     Text="Slet note"
+                    WidthRequest="250"  
+                    BackgroundColor="Red" 
+                    TextColor="White"  
+                    CornerRadius="8"
                     Clicked="DeleteButton_Clicked" />   <!-- slet knap -->
         </Grid>
     </VerticalStackLayout>
